# lantae

./: .gitignore  .lantae-generated.json  .nycrc.json  ARCHITECTURE.md  COVERAGE-REPORT.md  Gemfile  LANTAE-LSP-ENHANCED.md  LANTAE.md  LISP_QUICKSTART.md  PROJECT_STRUCTURE.md  README.md  Rakefile  TEST-RESULTS.md  debug_repl.rb  hello.py  index.js  install.sh  lantae  lantae.js  lantae.rb  lsp-client.js  mcp_client.rb  mcp_servers.yml  package-lock.json  package.json  setup-secrets.js  setup-secrets.rb  test-lsp-basic.js  test-simple.js  test_mcp_simple.rb  uninstall.sh
data/: tech_debt.json  tech_debt_report.html
data/word-banks/: quest_elements.yml
docs/: ARCHITECTURE.md  CREDITS.md  DEVELOPMENT_GUIDE.md  FEATURE_PARITY.md  INTELLIGENT_ROUTING.md  LANTAE-LSP-ENHANCED.md  LSP-IMPLEMENTATION.md  MIGRATION_GUIDE.md  README-LSP.md  REVIEW_AND_FOLLOW_UP.md  VALIDATION_GUIDE.md  VIM-QUICKSTART.md
docs/imf/: development-guide.md  implementation-tracker.md  non-ai-content-generation.md  quick-reference.md
docs/providers/: anthropic.md  gemini.md  ollama.md  openai.md  provider-comparison.md
examples/: enhanced_ui_demo.md  side_panel_demo.md
language_comparison_results/: focused_analysis_20250726_022124.json  focused_report_20250726_022124.md
lib/node/: lsp-server.js
lib/ruby/: api_key_authorizer.rb  async_repl.rb  auto_fixer.rb  cleanup_handler.rb  continuous_repl.rb  conversation_manager.rb  cost_tracker.rb  debt_reporter.rb  default_model_selector.rb  direct_authenticator.rb  enhanced_repl.rb  execution_engine.rb  intelligent_router.rb  interactive_enhancements.rb  mcp_manager.rb  mission_abort.rb  model_management.rb  oauth_authenticator.rb  ollama_discovery.rb  plan_visualizer.rb  planning_agent.rb  plugin_system.rb  prompt_templates.rb  provider_detector.rb  provider_manager.rb  response_formatter.rb  side_panel_manager.rb  split_screen_ui.rb  squad_deployment.rb  stable_async_repl.rb  stable_ui.rb  streaming_handler.rb  task_analyzer.rb  task_complexity.rb  task_database.rb  tool_manager.rb  ui_components.rb  validation_engine.rb  workspace_authenticator.rb
lib/ruby/lsp/: client.rb  (+5 more)
lisp/: Makefile  README-LISP.md  lantae.lisp  load-lantae.lisp  run-interactive.lisp  start-repl.lisp  start.sh  test-anthropic.lisp  test-chat.lisp  test-enhanced-commands.lisp  test-function-calling.lisp  test-openai-structure.lisp  test-openai.lisp  test-provider-switching.lisp  test-repl.lisp
nodejs-lantae/: README.md  package.json  tsconfig.json
nodejs-lantae/src/: cli.ts  index.ts
python-lantae/: README.md  pyproject.toml
python-lantae/src/lantae/: __init__.py
python-lantae/src/lantae/cli/: main.py
python-lantae/src/lantae/config/: models.py
python-lantae/src/lantae/providers/: base.py
rust-lantae/: .gitignore  Cargo.toml  README.md
rust-lantae/src/: lib.rs  main.rs
rust-lantae/src/cli/: commands.rs  mod.rs  repl.rs
rust-lantae/src/config/: settings.rs
rust-lantae/src/providers/: anthropic.rs  base.rs  mod.rs  ollama.rs  openai.rs
rust-lantae/src/utils/: errors.rs  logging.rs  mod.rs
scripts/: fix_tab_completion.sh  install-nodejs.sh  install-raspberry-pi.sh  install-ruby.sh  install-system-dependencies.sh  install-system-path.sh  run-coverage.js  set_api_keys.sh  setup-application.sh  setup-providers.sh  update-lantae-docs.sh  verify-and-launch.sh
spec/: batch_optimized_language_test_spec.rb  examples.txt  focused_batch_test_spec.rb  focused_language_comparison_spec.rb  language_comparison_spec.rb  lisp_comparison_spec.rb  lisp_tasks_spec.rb  live_integration_spec.rb  multi_language_comparison_spec.rb  smoke_test_spec.rb  spec_helper.rb
spec/integration/: agent_integration_spec.rb
spec/lsp/: code_actions_spec.rb  lsp_client_spec.rb  lsp_integration_spec.rb  lsp_server_spec.rb
spec/models/: qwen_test_spec.rb
tasks/: implement_dnd_procedural.rb
test/: integration_test.rb  test_review_follow.rb  test_side_panel_queue.rb  workflow_test.sh
test-coverage-output/: test-providers.js  test-tools.js
test-lsp-basic/: .lantae-generated.json  test.py
test-output/: Cargo.toml  index.html  package-lock.json  package.json  server.js
tests/: test-coverage.js  test-lantae-lsp.js  test_lantae_completion.rb  test_tab_completion.rb
tests/test-output/: .lantae-generated.json  hello.py  main.go
tests/test-simple/: .lantae-generated.json  hello.go  hello.js  test.py
vim-plugin/: README.md
vim-plugin/doc/: lantae.txt
vim-plugin/ftplugin/: lantae.vim
vim-plugin/plugin/: lantae.vim
vim-plugin/syntax/: lantae.vim
vscode-extension/: README.md  language-configuration.json  package.json
(+76 files in other folders)
