[package]
name = "lantae"
version = "1.0.0"
edition = "2021"
authors = ["Lantae Contributors"]
description = "Rust implementation of Lantae - Multi-Provider LLM Interface"
license = "MIT"
repository = "https://github.com/jpditri/lantae-cli"
readme = "README.md"

[dependencies]
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and REPL
clap = { version = "4.0", features = ["derive"] }
rustyline = "13.0"
colored = "2.0"
indicatif = "0.17"

# Configuration
config = "0.14"
dirs = "5.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[[bin]]
name = "lantae"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true